--------
v5.0-git
--------

[mms] Allow multiple messages to be forwarded in a single outgoing message
      (DIMP) (Request #9132).
[mms] Add personal recipient message filter (Request #8659).
[mms] Add mailing list message filter (Request #8659).
[mms] Add ability to define search criteria to be applied to any mailbox
      (Request #8659).
[mms] Use recipient search (To/Cc/Bcc) by default instead of To search.
[mms] Virtual folders now editable via a preferences group.
[mms] Search code has been entirely rewritten.
[jan] Rename servers.php to backends.php.
[mms] Use alternate text part to generate reply/forward text when switching
      compose modes if user has not altered message text (DIMP).
[mms] Improved login error reporting/logging in IMP (Request #9211).
[mms] Add hook to skip MDN prompt based on content of message headers.
[mms] Allow expand/collapse of folders in MIMP.
[mms] Use single, unified mailbox cache.
[mms] Add support for setting/retrieving special-use mailboxes from IMAP
      server.
[mms] Add preference to control if we check for recipient PGP public keys
      when replying (Request #7962).
[mms] Add preference to allow for automatic spam reporting when explicitly
      moving messages to the Spam mailbox (Request #6455).
[mms] Automatically determine view based on browser and 'dynamic_view'
      preference (Request #9159).
[mms] Add preference to define default font family/size for the HTML compose
      editor.
[mms] Honor nav_expanded preference (DIMP).
[mms] Allow admin to define list of safe e-mail addresses that will not
      experience HTML image blocking (Request #9129).
[mms] HTML compose editor uses Horde language for UI (Request #9084;
      leandro.damascena@gmail.com).
[mms] Add config option to disable multipart/related conversions
      (Request #9099).
[mms] Sentmail SQL driver now supports split read/write operation.
[mms] Pass compose message data to mailer backend via stream; much more